<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_title">Accessibility</string>
    <string name="account_management_disabled">Account management for \"%s\" has been disabled.</string>
    <string name="account_management_enabled">Account management for \"%s\" has been enabled.</string>
    <string name="account_management_title">Account management</string>
    <string name="account_migration_failed_message">Account failed to migrate:</string>
    <string name="account_type_hint">Enter an account type</string>
    <string name="actions_title">Actions:</string>
    <string name="activate_reset_password_token_cancelled">Token activation canceled</string>
    <string name="add">Add</string>
    <string name="add_account">Add account</string>
    <string name="add_account_dialog_title">Account name:</string>
    <string name="add_account_explanation">To add an account, select the corresponding option below. Select skip if you want to add it later:</string>
    <string name="add_account_later_message">Please add the account later.</string>
    <string name="add_account_skip">Skip</string>
    <string name="add_account_title">Provisioning finished successfully</string>
    <string name="add_account_with_name">Add account with name</string>
    <string name="add_cross_profile_app_widget_providers">Enable app widgets in a work profile app</string>
    <string name="add_cross_profile_app_widget_providers_title">Enable app widgets</string>
    <string name="add_cross_profile_intent_failed_msg">Cross-profile intent requires at least one action, category or scheme</string>
    <string name="add_cross_profile_intent_success_msg">Cross-profile intent filter has been added</string>
    <string name="add_cross_profile_intents_title">Add cross-profile intents</string>
    <string name="add_input_method_on_parent_fail">Failed to add input method on parent</string>
    <string name="add_network">Add network</string>
    <string name="affiliated_user">Affiliated user</string>
    <string name="affiliation_id_empty_error">Affiliation id cannot be empty</string>
    <string name="all_accessibility_services_enabled">All accessibility services are enabled</string>
    <string name="all_ca_certificates_removed">All CA certificates have been removed.</string>
    <string name="all_cross_profile_widget_providers_are_disabled">There is no widget from any of the work profile apps that is in enabled state.</string>
    <string name="all_cross_profile_widget_providers_are_enabled">There is no widget from any of the work profile apps that is in disabled state.</string>
    <string name="brand_attestation_checkbox">Include brand attestation only</string>
    <string name="certificate_alias_prompt_certificate_name">Certificate name:</string>
    <string name="clear_cross_profile_intents">Clear all cross-profile intents</string>
    <string name="cross_profile_intents">Cross-profile intents</string>
    <string name="cross_profile_widget_providers_title">Cross-profile widget providers</string>
    <string name="current_selected_package">Current package:</string>
    <string name="current_system_update_policy">Current system update policy:</string>
    <string name="delete_esim">Delete eSIM</string>
    <string name="device_id_attestation_description">Device ID attestation options</string>
    <string name="disable_bluetooth_contact_sharing">Disable bluetooth contact sharing</string>
    <string name="disable_cross_profile_caller_id">Disable cross-profile caller ID</string>
    <string name="disable_cross_profile_contacts_search">Disable cross-profile contacts search</string>
    <string name="download_esim">Download eSIM</string>
    <string name="ec_key_checkbox">Generate EC key (Default: RSA)</string>
    <string name="enable_override_apn">Enable override APNs</string>
    <string name="get_managed_esim">Get managed eSIM</string>
    <string name="imei_attestation_checkbox">Include device IMEI</string>
    <string name="insert_override_apn">Insert override APN</string>
    <string name="key_attestation_checkbox">Include key attestation challenge</string>
    <string name="key_attestation_description">Key Attestation options</string>
    <string name="keyguard_disable_face">Disable face unlock</string>
    <string name="keyguard_disable_fingerprint">Disable fingerprint</string>
    <string name="keyguard_disable_iris">Disable iris unlock</string>
    <string name="keyguard_disable_remote_input">Disable text entry in secure keyguard screen</string>
    <string name="keyguard_disable_secure_camera">Disable secure camera</string>
    <string name="keyguard_disable_secure_notifications">Disable secure notifications</string>
    <string name="keyguard_disable_shortcuts">Disable shortcuts</string>
    <string name="keyguard_disable_trust_agents">Disable trust agents</string>
    <string name="keyguard_disable_unredacted_notifications">Disable unredacted notifications</string>
    <string name="keyguard_disable_widgets_all">Disable widgets</string>
    <string name="keyguard_features">Keyguard features</string>
    <string name="lock_screen_message">Lock screen message</string>
    <string name="lock_task_feature_global_actions">Global actions (power button menu)</string>
    <string name="lock_task_feature_home">Home</string>
    <string name="lock_task_feature_keyguard">Keyguard</string>
    <string name="lock_task_feature_notifications">Notifications</string>
    <string name="lock_task_feature_overview">Overview</string>
    <string name="lock_task_feature_system_info">System info</string>
    <string name="manage_esim">Manage eSIM</string>
    <string name="managed_subscriptions_title">Set managed subscriptions policy</string>
    <string name="maximum_lock_time_all_admins">Max time as set by all/other admins</string>
    <string name="maximum_lock_time_category">Max time to screen lock</string>
    <string name="maximum_lock_time_seconds">Max time to screen lock (seconds)</string>
    <string name="maximum_password_fails">Max password failures for local wipe</string>
    <string name="maximum_password_fails_all_admins">Max failures as set by all/other admins</string>
    <string name="meid_attestation_checkbox">Include device MEID</string>
    <string name="minimum_password_quality">Minimum password quality</string>
    <string name="organization_info">Organization info</string>
    <string name="override_apn_title">Override APN management</string>
    <string name="password_constraints">Password constraints</string>
    <string name="password_expiration">Password expiration</string>
    <string name="password_expiration_aggregate">Expiration by all/other admins</string>
    <string name="password_expiration_seconds">Password expiration (seconds)</string>
    <string name="password_history_length">Password history length</string>
    <string name="password_min_length">Minimum password length</string>
    <string name="password_min_letters">Minimum number of letters</string>
    <string name="password_min_lowercase">Minimum number of lower-case characters</string>
    <string name="password_min_nonletter">Minimum number of non-letters</string>
    <string name="password_min_numeric">Minimum number of digits</string>
    <string name="password_min_symbols">Minimum number of symbols</string>
    <string name="password_min_uppercase">Minimum number of upper-case characters</string>
    <string name="policies_title">Policies</string>
    <string name="remove_cross_profile_app_widget_providers">Remove app widgets in a work profile app</string>
    <string name="remove_override_apn">Remove all override APNs</string>
    <string name="security_level_enterprise_192">Enterprise 192</string>
    <string name="security_level_enterprise_eap">Enterprise EAP</string>
    <string name="security_level_open">Open</string>
    <string name="security_level_personal">Personal</string>
    <string name="select_app_instructions">Select an app from the list, or manually enter a package name below:</string>
    <string name="selected_package_clear">Clear</string>
    <string name="selected_package_new_label">New package name</string>
    <string name="selected_package_none">None</string>
    <string name="selected_package_set">Set</string>
    <string name="serial_num_attestation_checkbox">Include device serial number</string>
    <string name="set_lock_task_features_title">Set lock task features</string>
    <string name="set_organization_color">Set organization color</string>
    <string name="set_organization_name">Set organization name</string>
    <string name="set_trust_agent_config">Set trust agent config</string>
    <string name="strong_auth_timeout_category">Timeout after which strong auth will be required again</string>
    <string name="strong_auth_timeout_seconds">Timeout for strong auth (seconds)</string>
    <string name="strongbox_features_description">StrongBox-related options</string>
    <string name="system_update_policy_Windowed">Install within a maintenance window</string>
    <string name="system_update_policy_add_freeze_period">Add new period</string>
    <string name="system_update_policy_automatic">Automatic immediate install</string>
    <string name="system_update_policy_none">None</string>
    <string name="system_update_policy_postpone">Postpone</string>
    <string name="system_update_policy_set_policy">Set new policy</string>
    <string name="system_update_policy_window_end_label">Maintenance window end:</string>
    <string name="system_update_policy_window_freeze_period_label">Freeze Periods:</string>
    <string name="system_update_policy_window_start_label">Maintenance window start:</string>
    <string name="trust_agent_features">Trust agent features</string>
    <string name="use_individual_attestation_checkbox">Use Individual Attestation Certificate</string>
    <string name="use_strongbox_checkbox">Use StrongBox</string>
    <string name="user_selectability_checkbox">Make user-selectable</string>
    <string name="user_selectability_description">User-selectability</string>
    <string name="work_telephony_title">Work Profile Telephony</string>
</resources>