<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:testdpc="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/lock_screen_message">
        <com.afwsamples.testdpc.common.preference.DpcEditTextPreference android:title="@string/lock_screen_message" android:key="key_lock_screen_message" android:defaultValue="" android:dialogTitle="@string/lock_screen_message" android:inputType="text" testdpc:admin="deviceOwner|orgOwnedProfileOwner" testdpc:minSdkVersion="N" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/maximum_lock_time_category">
        <com.afwsamples.testdpc.common.preference.DpcEditTextPreference android:title="@string/maximum_lock_time_seconds" android:key="key_max_time_screen_lock" android:defaultValue="0" android:dialogTitle="@string/maximum_lock_time_seconds" android:inputType="number" testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcPreference android:title="@string/maximum_lock_time_all_admins" android:selectable="false" android:key="key_max_time_screen_lock_aggregate" testdpc:minSdkVersion="L" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/strong_auth_timeout_category">
        <com.afwsamples.testdpc.common.preference.DpcEditTextPreference android:title="@string/strong_auth_timeout_seconds" android:key="key_strong_auth_timeout" android:defaultValue="0" android:dialogTitle="@string/strong_auth_timeout_seconds" android:inputType="number" testdpc:minSdkVersion="O" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/maximum_password_fails">
        <com.afwsamples.testdpc.common.preference.DpcEditTextPreference android:title="@string/maximum_password_fails" android:key="key_max_fails_before_wipe" android:defaultValue="0" android:dialogTitle="@string/maximum_password_fails" android:inputType="number" testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcPreference android:title="@string/maximum_password_fails_all_admins" android:selectable="false" android:key="key_max_fails_before_wipe_aggregate" testdpc:minSdkVersion="L" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/keyguard_features">
        <com.afwsamples.testdpc.common.preference.DpcSwitchPreference android:title="@string/keyguard_disable_secure_camera" android:key="keyguard_disable_secure_camera" testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcSwitchPreference android:title="@string/keyguard_disable_secure_notifications" android:key="keyguard_disable_secure_notifications" testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcSwitchPreference android:title="@string/keyguard_disable_unredacted_notifications" android:key="keyguard_disable_unredacted_notifications" testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcSwitchPreference android:title="@string/keyguard_disable_trust_agents" android:key="keyguard_disable_trust_agents" testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcSwitchPreference android:title="@string/keyguard_disable_face" android:key="keyguard_disable_face" testdpc:minSdkVersion="P" />
        <com.afwsamples.testdpc.common.preference.DpcSwitchPreference android:title="@string/keyguard_disable_fingerprint" android:key="keyguard_disable_fingerprint" testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcSwitchPreference android:title="@string/keyguard_disable_iris" android:key="keyguard_disable_iris" testdpc:minSdkVersion="P" />
        <com.afwsamples.testdpc.common.preference.DpcSwitchPreference android:title="@string/keyguard_disable_remote_input" android:key="keyguard_disable_remote_input" testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcSwitchPreference android:title="@string/keyguard_disable_shortcuts" android:key="keyguard_disable_shortcuts" testdpc:minSdkVersion="U" />
        <com.afwsamples.testdpc.common.preference.DpcSwitchPreference android:title="@string/keyguard_disable_widgets_all" android:key="keyguard_disable_widgets_all" testdpc:minSdkVersion="L" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/trust_agent_features">
        <com.afwsamples.testdpc.common.preference.DpcPreference android:title="@string/set_trust_agent_config" android:key="key_set_trust_agent_config" testdpc:minSdkVersion="L" />
    </PreferenceCategory>
</PreferenceScreen>