<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:testdpc="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/password_expiration">
        <com.afwsamples.testdpc.common.preference.DpcEditTextPreference android:title="@string/password_expiration_seconds" android:key="password_expiration_time" android:inputType="number" testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcPreference android:title="@string/password_expiration_aggregate" android:selectable="false" android:key="password_expiration_aggregate" testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcEditTextPreference android:title="@string/password_history_length" android:key="password_history_length" android:inputType="number" testdpc:minSdkVersion="L" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/password_constraints">
        <com.afwsamples.testdpc.common.preference.DpcListPreference android:title="@string/minimum_password_quality" android:key="minimum_password_quality" testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcEditTextPreference android:title="@string/password_min_length" android:key="password_min_length" android:inputType="number" testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcEditTextPreference android:title="@string/password_min_letters" android:key="password_min_letters" android:inputType="number" testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcEditTextPreference android:title="@string/password_min_numeric" android:key="password_min_numeric" android:inputType="number" testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcEditTextPreference android:title="@string/password_min_lowercase" android:key="password_min_lowercase" android:inputType="number" testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcEditTextPreference android:title="@string/password_min_uppercase" android:key="password_min_uppercase" android:inputType="number" testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcEditTextPreference android:title="@string/password_min_symbols" android:key="password_min_symbols" android:inputType="number" testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcEditTextPreference android:title="@string/password_min_nonletter" android:key="password_min_nonletter" android:inputType="number" testdpc:minSdkVersion="L" />
    </PreferenceCategory>
</PreferenceScreen>