<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/system_update_label" android:layout_width="wrap_content" android:layout_height="32.0dip" android:text="@string/current_system_update_policy" />
    <EditText android:id="@id/system_update_policy_current" android:layout_width="fill_parent" android:layout_height="wrap_content" android:editable="false" android:layout_toRightOf="@id/system_update_label" />
    <RadioGroup android:orientation="vertical" android:id="@id/system_update_policy_selection" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:layout_below="@id/system_update_label" android:layout_alignParentLeft="true">
        <RadioButton android:id="@id/system_update_policy_automatic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/system_update_policy_automatic" />
        <RadioButton android:id="@id/system_update_policy_Windowed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/system_update_policy_Windowed" />
        <RadioButton android:id="@id/system_update_policy_postpone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/system_update_policy_postpone" />
        <RadioButton android:id="@id/system_update_policy_none" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/system_update_policy_none" />
    </RadioGroup>
    <LinearLayout android:orientation="vertical" android:id="@id/system_update_policy_blackout_periods" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/system_update_policy_selection">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/system_update_policy_window_freeze_period_label" />
        <Button android:id="@id/system_update_policy_btn_add_period" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/system_update_policy_add_freeze_period" />
        <ListView android:id="@id/system_update_policy_blackout_period_list" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="100.0dip" android:fadeScrollbars="false" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/system_update_policy_windowed_details" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/system_update_policy_blackout_periods" android:layout_alignParentLeft="true">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/system_update_policy_window_start_label" />
        <Button android:id="@id/system_update_policy_window_start" android:layout_width="90.0dip" android:layout_height="50.0dip" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/system_update_policy_window_end_label" />
        <Button android:id="@id/system_update_policy_window_end" android:layout_width="90.0dip" android:layout_height="50.0dip" />
    </LinearLayout>
    <Button android:id="@id/system_update_policy_set" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="48.0dip" android:text="@string/system_update_policy_set_policy" android:layout_below="@id/system_update_policy_windowed_details" android:layout_alignParentLeft="true" />
</RelativeLayout>